# hyuabot-kakao-backend-python

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  answer_food.py  answer_library.py  answer_shuttle.py  apps.py  handler.py  main.py  make_answer.py  mypy.ini  phone.db  phone_seoul.db  pyproject.toml  recommend.db  recommend.py  requirements.txt  setup.cfg  url.py  user.db  views.py
.github/workflows/: default.yml  deploy.yml  flake8-matcher.json  mypy-matcher.json
answer/: answer_bus.py  answer_common.py  answer_food.py  answer_library.py  answer_shuttle.py  answer_subway.py
common/: models.py  receiver.py  sender.py  user.py
food/: food_crawl.py  food_main.py
phone/: phone_search.py
src/: config.py  constants.py  main.py  utils.py
src/app/hyuabot/kakao/: __init__.py  main.py
src/app/hyuabot/kakao/bus/: __init__.py  arrival.py
src/app/hyuabot/kakao/core/: config.py  create_response.py  parse_input.py
src/app/hyuabot/kakao/food/: __init__.py  cafeteria.py  campus.py
src/app/hyuabot/kakao/scheme/: request.py  response.py
src/app/hyuabot/kakao/shuttle/: __init__.py  arrival.py  stop.py
src/bus/: router.py
src/cafeteria/: router.py
src/schema/: payload.py  response.py
src/shuttle/: router.py
src/subway/: router.py
tests/: conftest.py  test_bus_route.py  test_cafeteria_route.py  test_healthcheck_route.py  test_shuttle_route.py  test_subway_route.py
transport/: bus.py  shuttle_main.py  subway.py
transport/shuttle/: date.py  shuttle.py  strings.py
weather/: weather.py
(+31 files in other folders)
